<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.cyr.chatogo.Activities.MainActivity">
    <item
        android:id="@+id/action_contacts"
        android:orderInCategory="100"
        android:title="@string/action_contacts"
        android:icon="@drawable/ic_contacts"
        app:showAsAction="always"
        />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="101"
        android:title="@string/action_settings"
        android:icon="@drawable/ic_settings"
        app:showAsAction="always"
        />

    <item
        android:id="@+id/action_signout"
        android:title="@string/action_logout"
        app:showAsAction="never"
        />

</menu>
