<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:focusableInTouchMode="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.cyr.chatogo.Activities.AuthenticationActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:paddingBottom="55dp"
        android:visibility="gone"
        />
    <ScrollView
        android:id="@+id/form_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/init_image"
                android:layout_marginTop="16dp"
                android:src="@drawable/contacts"/>
            <EditText
                android:id="@+id/username"
                android:hint="@string/prompt_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapSentences|text"
                android:maxLines="1"/>
            <EditText
                android:id="@+id/password"
                android:hint="@string/prompt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:maxLines="1" />
            <EditText
                android:id="@+id/location"
                android:hint="@string/prompt_location_ex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textAutoComplete"
                android:visibility="gone"
                android:maxLines="1" />
            <Button
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                style="@style/Widget.AppCompat.Button.Colored"
                android:text="@string/action_login"
                android:onClick="onLogIn"
                />
            <Button
                android:id="@+id/register_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                style="@style/Widget.AppCompat.Button.Colored"
                android:text="@string/action_register"
                android:onClick="onRegister"
                />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>